# bogosort

./: README.md  bogosort.py  setup.cfg
bogosort/: bogosort.py  supernumbers.py
src/bogosort/: __init__.py  main.py
