[metadata]
name = bogosort
version = 0.0.1
author = abehidek, viktormarinho
author_email = hidek.abe@outlook.com, viktormpcs@gmail.com
description = Sort an list using the most (in)efficient method!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flakevine/bogosort
project_urls =
    Bug Tracker = https://github.com/flakevine/bogosort/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
